v.1.0.6
* made jewel socketing more informative
* if pvp is disabled magic shield should no longer bypass pvp checks
* changed buff spells to require any weapon, instead of mage weapons

v1.0.5

Backup world before update! I added some code to retrieve the spells from hotbar but it might not work.

* spell hotbar setup is now an inventory, and should be much more intuitive.
* you can now switch spells with middle mouse scrolling! (when pressing R)
* switched to vanilla bows, there were arrow render problems (i think vanilla hardcoded them..)
* spells now correctly require bows or melee (for arrow spells and melee spells) currently only 1 melee spell
* compatible items should now be able to cast spells
* jewels now more likely to drop as a lower level, to allow easier socketing
* dodge now no longer works on elemental damage. It's now in line with armor.
* orb of transmutation now easier to craft
* fixed spell mana tooltips being wrong
* fix judgement effect not doing damage

v.1.0.4

Mod now requires library: Library of Exile

Goal of the library is to try to allow some of the features I make to be playable without Age of Exile.
For example, if I wanted to make a dimension, I could make it as a separate mod and then use my library to add Age of Exile support.
And also to house some widely used utilities.

A separate mod has been created to house my controversial balance changes: Balance of Exile.
This currently contains the enviromental damage check and anti mob farm system. 

This is my first time making a library, so I expect some bugs.

* added new gear type, Holy scepter.
* added a new unique scepter
* fixed leveling being too easy because exp was multiplied by total mob health instead of total vanilla hp before the added health
* fixed hp rendering so it's accurate (it didnt show lost hp for a while)
* skill gems now salvagable (dont throw them away now xD)
* should fix spell tooltips having wrong levels